<resources>
    <string name="app_name">Butterknife Demo</string>
    <string name="activity_injection">Activity View Injection</string>
    <string name="default_prompt">Welcome to the Butterknife Demo. Tap a button or something!</string>
    <string name="not_tapped">Not tapped.</string>
    <string name="tapped_multiple">Tapped %1$d times</string>
    <string name="tapped_single">Tapped once</string>
    <string name="tapped_twice">Tapped twice</string>
    <string name="left">Left</string>
    <string name="right">Right</string>

    <string name="input_has_focus">Input box has focus</string>
    <string name="input_no_focus">Input box doesn\'t have focus</string>
    <string name="fragment_injection">Fragment View Injection</string>
    <string name="visible">Visible</string>
    <string name="button_1">Button 1</string>
    <string name="button_6">Button 6</string>
    <string name="button_5">Button 5</string>
    <string name="button_4">Button 4</string>
    <string name="button_3">Button 3</string>
    <string name="button_2">Button 2</string>
    <string name="view_list_injection">View List Injection</string>
    <string name="steal_focus">Use this EditText to steal focus from above</string>

    <plurals name="tapped_d_times">
        <item quantity="one" >@string/tapped_single</item>
        <item quantity="two" >@string/tapped_twice</item>
        <item quantity="other">@string/tapped_multiple</item>
    </plurals>
</resources>
