<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_image"
            android:src="@drawable/ic_default_cover"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:padding="10dp"
            android:text="@string/default_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/click_counter"
            android:padding="20dp"
            android:text="@string/not_tapped"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/left"
                android:text="@string/left"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/right"
                android:text="@string/right"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_edit"
                android:lines="3"
                android:maxLines="5"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/focus_check"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/focus_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/steal_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>

