<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/primary"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <ImageView
                    style="@style/gridImage"
                    android:id="@+id/image_1"
                    android:src="@drawable/ic_image_1"/>

                <ImageView
                    style="@style/gridImage"
                    android:id="@+id/image_2"
                    android:src="@drawable/ic_image_2"/>

                <ImageView
                    style="@style/gridImage"
                    android:src="@drawable/ic_image_3"
                    android:id="@+id/image_3"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <ImageView
                    android:id="@+id/image_4"
                    android:src="@drawable/ic_image_4"
                    style="@style/gridImage"/>

                <ImageView
                    style="@style/gridImage"
                    android:src="@drawable/ic_image_5"
                    android:id="@+id/image_5"/>

                <ImageView
                    style="@style/gridImage"
                    android:src="@drawable/ic_image_6"
                    android:id="@+id/image_6"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/alpha_seeker"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:max="100"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/alpha_value"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/accent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:ems="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:background="@color/accent"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:text="@string/visible"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/gridButton"
                android:text="@string/button_1"
                android:id="@+id/button_1"/>

            <Button
                style="@style/gridButton"
                android:text="@string/button_2"
                android:id="@+id/button_2"/>

            <Button
                style="@style/gridButton"
                android:text="@string/button_3"
                android:id="@+id/button_3"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/gridButton"
                android:text="@string/button_4"
                android:id="@+id/button_4"/>

            <Button
                style="@style/gridButton"
                android:text="@string/button_5"
                android:id="@+id/button_5"/>

            <Button
                style="@style/gridButton"
                android:text="@string/button_6"
                android:id="@+id/button_6"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
